add missing -C to openmp Makefile

--- a/openmp/Makefile
+++ b/openmp/Makefile
@@ -1,39 +1,39 @@
 OMP_DIRS  := backprop bfs cfd heartwall hotspot kmeans lavaMD leukocyte lud nn nw srad streamcluster particlefilter pathfinder mummergpu
 
 all:
-	$(MAKE) backprop install
-	$(MAKE) bfs install
-	$(MAKE) cfd install
-	$(MAKE) heartwall install
-	$(MAKE) hotspot install
-	$(MAKE) kmeans/kmeans_openmp install
-	$(MAKE) lavaMD install
-	$(MAKE) leukocyte install
-	$(MAKE) lud install
-	$(MAKE) nn install
-	$(MAKE) nw install
-	$(MAKE) srad/srad_v1 install
-	$(MAKE) srad/srad_v2 install
-	$(MAKE) streamcluster install
-	$(MAKE) particlefilter install
-	$(MAKE) pathfinder install
-	$(MAKE) mummergpu install
+	$(MAKE) -C  backprop install
+	$(MAKE) -C  bfs install
+	$(MAKE) -C  cfd install
+	$(MAKE) -C  heartwall install
+	$(MAKE) -C  hotspot install
+	$(MAKE) -C  kmeans/kmeans_openmp install
+	$(MAKE) -C  lavaMD install
+	$(MAKE) -C  leukocyte install
+	$(MAKE) -C  lud install
+	$(MAKE) -C  nn install
+	$(MAKE) -C  nw install
+	$(MAKE) -C  srad/srad_v1 install
+	$(MAKE) -C  srad/srad_v2 install
+	$(MAKE) -C  streamcluster install
+	$(MAKE) -C  particlefilter install
+	$(MAKE) -C  pathfinder install
+	$(MAKE) -C  mummergpu install
 
 clean:
-	$(MAKE) backprop clean
-	$(MAKE) bfs clean
-	$(MAKE) cfd clean
-	$(MAKE) heartwall clean
-	$(MAKE) hotspot clean
-	$(MAKE) kmeans/kmeans_openmp clean
-	$(MAKE) lavaMD clean
-	$(MAKE) leukocyte clean
-	$(MAKE) lud clean
-	$(MAKE) nn clean
-	$(MAKE) nw clean
-	$(MAKE) srad/srad_v1 clean
-	$(MAKE) srad/srad_v2 clean
-	$(MAKE) streamcluster clean
-	$(MAKE) particlefilter clean
-	$(MAKE) pathfinder clean
-	$(MAKE) mummergpu clean
+	$(MAKE) -C  backprop clean
+	$(MAKE) -C  bfs clean
+	$(MAKE) -C  cfd clean
+	$(MAKE) -C  heartwall clean
+	$(MAKE) -C  hotspot clean
+	$(MAKE) -C  kmeans/kmeans_openmp clean
+	$(MAKE) -C  lavaMD clean
+	$(MAKE) -C  leukocyte clean
+	$(MAKE) -C  lud clean
+	$(MAKE) -C  nn clean
+	$(MAKE) -C  nw clean
+	$(MAKE) -C  srad/srad_v1 clean
+	$(MAKE) -C  srad/srad_v2 clean
+	$(MAKE) -C  streamcluster clean
+	$(MAKE) -C  particlefilter clean
+	$(MAKE) -C  pathfinder clean
+	$(MAKE) -C  mummergpu clean
