fix backprop Makefile, move some things to make.config

--- a/common/make.config
+++ b/common/make.config
@@ -1,5 +1,35 @@
+-include localConfig
+
+RODINIA_BASE_DIR ?=../
+
+CUDA_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/cuda
+OMP_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/omp
+OPENCL_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/opencl
+
+install_perms ?=0755
+
+# C compiler
+CC ?= gcc
+CC_FLAGS ?= -g  -O2
+
+# CUDA compiler
+NVCC ?= $(CUDA_DIR)/bin/nvcc
+NVCC_FLAGS ?= -I$(CUDA_DIR)/include
+
+# 'make dbg=1' enables NVCC debugging
+ifeq ($(dbg),1)
+	NVCC_FLAGS += -g -O0
+else
+	NVCC_FLAGS += -O2
+endif
+
+# 'make emu=1' compiles the CUDA kernels for emulation
+ifeq ($(emu),1)
+	NVCC_FLAGS += -deviceemu
+endif
+
 # CUDA toolkit installation path
-CUDA_DIR = /usr/local/cuda
+CUDA_DIR ?= /usr/local/cuda
 
 # CUDA toolkit libraries
 CUDA_LIB_DIR := $(CUDA_DIR)/lib
@@ -11,13 +41,13 @@ endif
 
 # CUDA SDK installation path
 #SDK_DIR = $(HOME)/NVIDIA_GPU_Computing_SDK/C
-SDK_DIR =$(HOME)/NVIDIA_CUDA_SDK
+SDK_DIR ?=$(HOME)/NVIDIA_CUDA_SDK
 
 # OPENCL
 
 # NVIDIA_DIR
 
-OPENCL_DIR =/af10/sc5nf/NVIDIA_GPU_Computing_SDK/
+OPENCL_DIR ?=$(SDK_DIR)
 OPENCL_INC = $(OPENCL_DIR)/OpenCL/common/inc
 OPENCL_LIB = $(OPENCL_DIR)/OpenCL/common/lib
 
