--- a/cuda/backprop/Makefile
+++ b/cuda/backprop/Makefile
@@ -1,25 +1,6 @@
 include ../../common/make.config
 
-# C compiler
-CC = gcc
-CC_FLAGS = -g  -O2
-
-# CUDA compiler
-NVCC = $(CUDA_DIR)/bin/nvcc
-NVCC_FLAGS = -I$(CUDA_DIR)/include
-
-# 'make dbg=1' enables NVCC debugging
-ifeq ($(dbg),1)
-	NVCC_FLAGS += -g -O0
-else
-	NVCC_FLAGS += -O2
-endif
-
-# 'make emu=1' compiles the CUDA kernels for emulation
-ifeq ($(emu),1)
-	NVCC_FLAGS += -deviceemu
-endif
-
+targets=backprop
 
 backprop: backprop.o facetrain.o imagenet.o backprop_cuda.o 
 	$(CC) $(CC_FLAGS) backprop.o facetrain.o imagenet.o backprop_cuda.o -o backprop -L$(CUDA_LIB_DIR) -lcuda -lcudart -lm
@@ -29,7 +10,7 @@ backprop: backprop.o facetrain.o imagenet.o backprop_cuda.o
 
 facetrain.o: facetrain.c backprop.h
 	$(CC) $(CC_FLAGS) facetrain.c -c
-	
+
 backprop.o: backprop.c backprop.h
 	$(CC) $(CC_FLAGS) backprop.c -c
 
@@ -42,3 +23,6 @@ imagenet.o: imagenet.c backprop.h
 
 clean:
 	rm -f *.o *~ backprop backprop_cuda.linkinfo
+
+install:
+	install -m $(install_perms) -t $(CUDA_BIN_DIR) $(targets)
