update some Makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -1,6 +1,6 @@
 -include localConfig
 
-RODINIA_BASE_DIR ?=../
+RODINIA_BASE_DIR ?= $(HOME)/code/rodinia_2.0.1
 
 CUDA_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/cuda
 OMP_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/omp
