fix more makefiles

--- a/cuda/particlefilter/Makefile
+++ b/cuda/particlefilter/Makefile
@@ -1,18 +1,19 @@
-#makefile
-
 include ../../common/make.config
 
-CC := $(CUDA_DIR)/bin/nvcc
+NVCC_FLAGS += -use_fast_math -lm
 
-INCLUDE := $(CUDA_DIR)/include
+targets=particlefilter_naive particlefilter_float
 
-all: naive float
+all: $(targets)
 
-naive: ex_particle_CUDA_naive_seq.cu
-	$(CC) -I$(INCLUDE) -L$(CUDA_LIB_DIR) -lcuda -g -lm -O3 -use_fast_math -arch sm_13 ex_particle_CUDA_naive_seq.cu -o particlefilter_naive
-	
-float: ex_particle_CUDA_float_seq.cu
-	$(CC) -I$(INCLUDE) -L$(CUDA_LIB_DIR) -lcuda -g -lm -O3 -use_fast_math -arch sm_13 ex_particle_CUDA_float_seq.cu -o particlefilter_float
+particlefilter_naive: ex_particle_CUDA_naive_seq.cu
+	$(CC) -I$(INCLUDE) -L$(CUDA_LIB_DIR) $^ -o $@
+
+particlefilter_float: ex_particle_CUDA_float_seq.cu
+	$(NVCC) -L$(CUDA_LIB_DIR) $^ -o $@
 
 clean:
-	rm particlefilter_naive particlefilter_float
+	rm -f particlefilter_naive particlefilter_float
+
+install: $(targets)
+	install -m $(install_perms) -t $(CUDA_BIN_DIR) $(targets)
