fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -11,6 +11,11 @@ install_perms ?=0755
 # C compiler
 CC ?= gcc
 CC_FLAGS ?= -g  -O2
+CC_LINK_FLAGS ?= 
+
+#OMP_LIB ?= -lgomp
+OMP_FLAG ?= -fopenmp
+
 
 # CUDA compiler
 NVCC ?= $(CUDA_DIR)/bin/nvcc
