fix more makefiles

--- a/openmp/srad/Makefile
+++ b/openmp/srad/Makefile
@@ -2,18 +2,17 @@
 all: SRAD_V1 SRAD_V2
 
 SRAD_V1:
-	cd srad_v1; 	make
+	$(MAKE) -C srad_v1 install
 
 SRAD_V2:
-	cd srad_v2; 	make
+	$(MAKE) -C srad_v2 install
 
 clean: SRAD_V1_clean SRAD_V2_clean
 
 SRAD_V1_clean:
-	cd srad_v1; 	make clean
-	
+	$(MAKE) -C srad_v1 clean
+
 SRAD_V2_clean:
-	cd srad_v2; 	make clean
+	$(MAKE) -C srad_v2 clean
 
-
-
+install: all
