--- a/openmp/srad/srad_v2/Makefile
+++ b/openmp/srad/srad_v2/Makefile
@@ -1,9 +1,11 @@
-# C compiler
-CC = g++
-CC_FLAGS = -g -fopenmp -O2
+include ../../../common/make.config
+targets=srad_v2
 
-bfs: 
-	$(CC) $(CC_FLAGS) srad.cpp -o srad 
+srad_v2: 
+	$(CC) $(CC_FLAGS) srad.cpp -o srad_v2
 
 clean:
-	rm -f srad
+	rm -f $(targets)
+
+install: $(targets)
+	install -m $(install_perms) -t $(OMP_BIN_DIR) $(targets)
