fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -15,10 +15,15 @@ CC_LINK_FLAGS ?=
 
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
+CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
+CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
 
 # CUDA compiler
 NVCC ?= $(CUDA_DIR)/bin/nvcc
 NVCC_FLAGS ?= -I$(CUDA_DIR)/include
+
+NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
+NVCC_LINK ?=$(NVCC_OBJ) -L$(CUDA_LIB_DIR) 
 
 # 'make dbg=1' enables NVCC debugging
 ifeq ($(dbg),1)
