--- a/cuda/backprop/Makefile
+++ b/cuda/backprop/Makefile
@@ -1,9 +1,10 @@
+include ../../common/make.config
 targets=backprop
 
-include ../../common/make.config
+CC_LINK_FLAGS += -lm
 
 backprop: backprop.o facetrain.o imagenet.o backprop_cuda.o 
-	$(CC) $(CC_FLAGS) backprop.o facetrain.o imagenet.o backprop_cuda.o -o backprop -L$(CUDA_LIB_DIR) -lcuda -lcudart -lm
+	$(NVCC_LINK) $^ -o $@
 
 %.o: %.[ch]
 	$(CC) $(CC_FLAGS) $< -c
@@ -19,7 +20,6 @@ backprop_cuda.o: backprop_cuda.cu backprop.h
 
 imagenet.o: imagenet.c backprop.h
 	$(CC) $(CC_FLAGS) imagenet.c -c
-
 
 clean:
 	rm -f *.o *~ backprop backprop_cuda.linkinfo
