--- a/cuda/heartwall/Makefile
+++ b/cuda/heartwall/Makefile
@@ -1,13 +1,15 @@
 include ../../common/make.config
 targets=heartwall
 
+CC_LINK_FLAGS += -lm
+
 # link objects(binaries) together
 heartwall: main.o ./AVI/avilib.o ./AVI/avimod.o 
-	$(NVCC) $(NVCC_FLAGS) main.o ./AVI/avilib.o ./AVI/avimod.o -I/usr/local/cuda/include -lm -o heartwall
+	$(NVCC_LINK) $^ -o $@
 
 # compile main function file into object (binary)
 main.o: main.cu kernel.cu define.c
-	$(NVCC) $(NVCC_FLAGS) main.cu -I./AVI -c
+	$(NVCC_OBJ) main.cu -I./AVI -c
 
 ./AVI/avilib.o ./AVI/avimod.o:
 	$(MAKE) -C AVI
