--- a/cuda/streamcluster/Makefile
+++ b/cuda/streamcluster/Makefile
@@ -4,7 +4,7 @@ TARGET_G = sc_gpu
 targets=$(TARGET_G)
 
 $(TARGET_G): streamcluster_cuda_cpu.cpp streamcluster_cuda.cu streamcluster_header.cu
-	$(NVCC) $(NVCC_FLAGS) streamcluster_cuda_cpu.cpp streamcluster_cuda.cu streamcluster_header.cu -o $(TARGET_G) -lcuda
+	$(NVCC_LINK) $^ -o $@
 
 
 clean:
