--- a/openmp/backprop/Makefile
+++ b/openmp/backprop/Makefile
@@ -1,25 +1,28 @@
-# C compiler
-CC = gcc
-CC_FLAGS = -g -fopenmp  -O2
+include ../../common/make.config
+targets=backprop
 
+CC_LINK_FLAGS += -lm
 
 backprop: backprop.o facetrain.o imagenet.o backprop_kernel.o 
-	$(CC) $(CC_FLAGS) backprop.o facetrain.o imagenet.o backprop_kernel.o -o backprop -lm
+	$(CC_OMP_LINK) $^ -o $@
 
 %.o: %.[ch]
-	$(CC) $(CC_FLAGS) $< -c
+	$(CC_OMP) $< -c
 
 facetrain.o: facetrain.c backprop.h
-	$(CC) $(CC_FLAGS) facetrain.c -c
+	$(CC_OMP) facetrain.c -c
 
 backprop.o: backprop.c backprop.h
-	$(CC) $(CC_FLAGS) backprop.c -c
+	$(CC_OMP) backprop.c -c
 
 backprop_kernel.o: backprop_kernel.c backprop.h
-	$(CC) $(CC_FLAGS) backprop_kernel.c -c
+	$(CC_OMP) backprop_kernel.c -c
 
 imagenet.o: imagenet.c backprop.h
-	$(CC) $(CC_FLAGS) imagenet.c -c
+	$(CC_OMP) imagenet.c -c
 
 clean:
 	rm -f *.o *~ backprop backprop_cuda.linkinfo
+
+install: $(targets)
+	install -m $(install_perms) -t $(OMP_BIN_DIR) $(targets)
