--- a/openmp/srad/srad_v2/Makefile
+++ b/openmp/srad/srad_v2/Makefile
@@ -2,7 +2,7 @@ include ../../../common/make.config
 targets=srad_v2
 
 srad_v2: 
-	$(CC) $(CC_FLAGS) srad.cpp -o srad_v2
+	$(CC_OMP_LINK) srad.cpp -o srad_v2
 
 clean:
 	rm -f $(targets)
