fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -10,8 +10,8 @@ install_perms ?=0755
 
 # C compiler
 CC ?= gcc
-CC_FLAGS ?= -g  -O2
-CC_LINK_FLAGS ?= 
+CC_FLAGS ?=
+CC_LINK_FLAGS ?=
 
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
@@ -28,7 +28,9 @@ NVCC_LINK ?=$(NVCC_OBJ) -L$(CUDA_LIB_DIR)
 # 'make dbg=1' enables NVCC debugging
 ifeq ($(dbg),1)
 	NVCC_FLAGS += -g -O0
+	CC_FLAGS += -g -O0
 else
+	CC_FLAGS += -O2
 	NVCC_FLAGS += -O2
 endif
 
@@ -59,6 +61,9 @@ SDK_DIR ?=$(HOME)/NVIDIA_CUDA_SDK
 OPENCL_DIR ?=$(SDK_DIR)
 OPENCL_INC = $(OPENCL_DIR)/OpenCL/common/inc
 OPENCL_LIB = $(OPENCL_DIR)/OpenCL/common/lib
+
+OCL_OBJ ?=$(NVCC) $(CC_FLAGS) $(OPENCL_FLAGS) -I$(OPENCL_INC)
+OCL_LINK ?=$(OCL_OBJ) -L$(OPENCL_LIB) -lOpenCL
 
 # AMD_DIR
 #OPENCL_DIR = /home/sc5nf/ati-stream-sdk-v2.2-lnx64/
