--- a/opencl/lavaMD/makefile
+++ b/opencl/lavaMD/makefile
@@ -1,86 +1,60 @@
 include ../../common/make.config
-
-# Example
-# target: dependencies
-	# command 1
-	# command 2
-          # .
-          # .
-          # .
-	# command n
-
-C_C = gcc
-OMP_LIB = -lgomp
-OMP_FLAG = -fopenmp
-OCL_LIB =	-L$(OPENCL_LIB) \
-			-lOpenCL
-OCL_INC = -I$(OPENCL_INC)
+targets=lavaMD
 
 # link objects together
-a.out:		main.o \
-			./kernel/kernel_gpu_opencl_wrapper.o \
-			./util/num/num.o \
-			./util/timer/timer.o \
-			./util/opencl/opencl.o
-	$(C_C)	main.o \
-			./kernel/kernel_gpu_opencl_wrapper.o \
-			./util/num/num.o \
-			./util/timer/timer.o \
-			./util/opencl/opencl.o \
-			-lm \
-			$(OCL_LIB) \
-			-o lavaMD
+lavaMD:	main.o \
+	./kernel/kernel_gpu_opencl_wrapper.o \
+	./util/num/num.o \
+	./util/timer/timer.o \
+	./util/opencl/opencl.o
+	$(OCL_LINK) $^\
+	-o $@
 
 # compile function files into objects
-main.o:		main.h \
-			main.c \
-			./kernel/kernel_gpu_opencl_wrapper.h \
-			./kernel/kernel_gpu_opencl_wrapper.c \
-			./util/num/num.h \
-			./util/num/num.c \
-			./util/timer/timer.h \
-			./util/timer/timer.c \
-			./util/opencl/opencl.h \
-			./util/opencl/opencl.c
-	$(C_C)	main.c \
-			-c \
-			-o main.o \
-			-O3
+main.o:	main.h \
+	main.c \
+	./kernel/kernel_gpu_opencl_wrapper.h \
+	./kernel/kernel_gpu_opencl_wrapper.c \
+	./util/num/num.h \
+	./util/num/num.c \
+	./util/timer/timer.h \
+	./util/timer/timer.c \
+	./util/opencl/opencl.h \
+	./util/opencl/opencl.c
+	$(OCL_OBJ)	main.c \
+	-c \
+	-o $@
 
 ./kernel/kernel_gpu_opencl_wrapper.o:	./kernel/kernel_gpu_opencl_wrapper.h \
-										./kernel/kernel_gpu_opencl_wrapper.c
-	$(C_C)								./kernel/kernel_gpu_opencl_wrapper.c \
-										$(OCL_INC) \
-										-c \
-										-o ./kernel/kernel_gpu_opencl_wrapper.o \
-										-O3
+	./kernel/kernel_gpu_opencl_wrapper.c
+	$(OCL_OBJ)	./kernel/kernel_gpu_opencl_wrapper.c \
+	-c \
+	-o $@
 
 ./util/num/num.o:	./util/num/num.h \
-					./util/num/num.c
-	$(C_C)			./util/num/num.c \
-					-c \
-					-o ./util/num/num.o \
-					-O3
+	./util/num/num.c
+	$(OCL_OBJ)	./util/num/num.c \
+	-c \
+	-o $@
 
 ./util/timer/timer.o:	./util/timer/timer.h \
-						./util/timer/timer.c
-	$(C_C)				./util/timer/timer.c \
-						-c \
-						-o ./util/timer/timer.o \
-						-O3
+	./util/timer/timer.c
+	$(OCL_OBJ)	./util/timer/timer.c \
+	-c \
+	-o $@
 
 ./util/opencl/opencl.o:	./util/opencl/opencl.h \
-						./util/opencl/opencl.c
-	$(C_C)				./util/opencl/opencl.c \
-						$(OCL_INC) \
-						-c \
-						-o ./util/opencl/opencl.o \
-						-O3
-
+	./util/opencl/opencl.c
+	$(OCL_OBJ) ./util/opencl/opencl.c \
+	-c \
+	-o $@
 # delete all object and executable files
 clean:
-	rm	*.o lavaMD \
-		./kernel/*.o \
-		./util/num/*.o \
-		./util/timer/*.o \
-		./util/opencl/*.o
+	rm -f	*.o lavaMD \
+	./kernel/*.o \
+	./util/num/*.o \
+	./util/timer/*.o \
+	./util/opencl/*.o
+
+install: $(targets)
+	install -m $(install_perms) -t $(OMP_BIN_DIR) $(targets)
