--- a/opencl/srad/makefile
+++ b/opencl/srad/makefile
@@ -1,18 +1,8 @@
 include ../../common/make.config
+targets=srad
 
-CXX = g++
-DEBUGFLAGS = -g
-# You will need to modify the following 2 lines
-# by inserting the correct path to the OpenCL
-# lib and inc directories.
-CXXFLAGS = -I$(OPENCL_INC) $(DEBUGFLAGS)
-LINKFLAGS = -L/$(OPENCL_LIB) -lOpenCL
-
-ALLFLAGS = $(CXXFLAGS) $(LINKFLAGS)
-
-all:
-	$(CXX) $(ALLFLAGS) *.cpp -o srad
+srad: $(wildcard *.cpp)
+	$(OCL_LINK) $^ -o $@
 
 clean:
-	clear
 	@rm -f srad *.o *.out *~ *\#
