--- a/opencl/pathfinder/makefile
+++ b/opencl/pathfinder/makefile
@@ -1,20 +1,14 @@
 include ../../common/make.config
-CXX = g++
-DEBUGFLAGS = -g
-# You will need to modify the following 2 lines
-# by inserting the correct path to the OpenCL
-# lib and inc directories.
-CXXFLAGS = -I$(OPENCL_INC) -c $(DEBUGFLAGS)
-LINKFLAGS = -L$(OPENCL_LIB) -lOpenCL
+targets=pathfinder
 
 # link objects(binaries) together
-a.out: main.o OpenCL.o
-	$(CXX) $(LINKFLAGS) main.o OpenCL.o -o pathfinder
+pathfinder: main.o OpenCL.o
+	$(OCL_LINK) $^ -o $@
 
 # compile main function file into object (binary)
 main.o: main.cpp OpenCL.cpp kernels.cl
 	$(CXX) $(CXXFLAGS) main.cpp OpenCL.cpp
 
 clean:
-	clear
 	@rm -f pathfinder *.o *.out *~ *\#
+
