fix more makefiles

--- a/cuda/cfd/Makefile
+++ b/cuda/cfd/Makefile
@@ -1,17 +1,7 @@
 include ../../common/make.config
+targets=euler3d  euler3d_double  pre_euler3d  pre_euler3d_double 
 
-CUDA_SDK_PATH := $(SDK_DIR)
-
-# Determine the correct version of the cutil library
-CUTIL_LIB = -lcutil
-ifeq ($(shell uname -m), x86_64)
-     ifeq ($(shell if test -e $(SDK_DIR)/lib/libcutil_x86_64.a; then echo T; else echo F; fi), T)
-        CUTIL_LIB = -lcutil_x86_64
-     endif
-endif
-
-
-all: euler3d  euler3d_double  pre_euler3d  pre_euler3d_double 
+all: $(targets)
 
 euler3d: euler3d.cu
 	nvcc -Xptxas -v -O3 --gpu-architecture=compute_13 --gpu-code=compute_13 euler3d.cu -o euler3d -I$(CUDA_SDK_PATH)/common/inc  -L$(CUDA_SDK_PATH)/lib $(CUTIL_LIB)
@@ -29,3 +19,6 @@ pre_euler3d_double: pre_euler3d_double.cu
 
 clean:
 	rm -f euler3d euler3d_double pre_euler3d pre_euler3d_double *.linkinfo
+
+install: $(targets)
+	install -m $(install_perms) -t $(CUDA_BIN_DIR) $(targets)
