--- a/common/make.config
+++ b/common/make.config
@@ -54,6 +54,14 @@ endif
 #SDK_DIR = $(HOME)/NVIDIA_GPU_Computing_SDK/C
 SDK_DIR ?=$(HOME)/NVIDIA_CUDA_SDK
 
+# Determine the correct version of the cutil library
+CUTIL_LIB = -lcutil
+ifeq ($(shell uname -m), x86_64)
+     ifeq ($(shell if test -e $(SDK_DIR)/lib/libcutil_x86_64.a; then echo T; else echo F; fi), T)
+        CUTIL_LIB = -lcutil_x86_64
+     endif
+endif
+
 # OPENCL
 
 # NVIDIA_DIR
