fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -2,6 +2,8 @@
 
 RODINIA_BASE_DIR ?= $(HOME)/code/rodinia_2.0.1
 
+-include $(RODINIA_BASE_DIR)/common/localConfig
+
 CUDA_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/cuda
 OMP_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/omp
 OPENCL_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/opencl
@@ -20,7 +22,7 @@ CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
 
 # CUDA compiler
 NVCC ?= $(CUDA_DIR)/bin/nvcc
-NVCC_FLAGS ?= -I$(CUDA_DIR)/include
+NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v
 
 NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
 NVCC_LINK ?=$(NVCC_OBJ) -L$(CUDA_LIB_DIR) 
@@ -52,15 +54,18 @@ endif
 
 # CUDA SDK installation path
 #SDK_DIR = $(HOME)/NVIDIA_GPU_Computing_SDK/C
-SDK_DIR ?=$(HOME)/NVIDIA_CUDA_SDK
+SDK_DIR?=$(HOME)/NVIDIA_CUDA_SDK
+
+NVCC_FLAGS += -I$(SDK_DIR)/C/common/inc/
 
 # Determine the correct version of the cutil library
-CUTIL_LIB = -lcutil
-ifeq ($(shell uname -m), x86_64)
-     ifeq ($(shell if test -e $(SDK_DIR)/lib/libcutil_x86_64.a; then echo T; else echo F; fi), T)
-        CUTIL_LIB = -lcutil_x86_64
-     endif
-endif
+#CUTIL_LIB = -lcutil
+#ifeq ($(shell uname -m), x86_64)
+#     ifeq ($(shell if test -e $(SDK_DIR)/lib/libcutil_x86_64.a; then echo T; else echo F; fi), T)
+#        CUTIL_LIB = -lcutil_x86_64
+#     endif
+#endif
+CUTIL_LIB?=$(SDK_DIR)/C/lib/libcutil_x86_64.a
 
 # OPENCL
 
