--- a/cuda/kmeans/Makefile
+++ b/cuda/kmeans/Makefile
@@ -1,28 +1,8 @@
 include ../../common/make.config
-
-# C compiler
-CC = gcc
-CC_FLAGS = -g -fopenmp -O2 
-
-# CUDA compiler
-NVCC = $(CUDA_DIR)/bin/nvcc
-NVCC_FLAGS = -I$(CUDA_DIR)/include 
-
-# 'make dbg=1' enables NVCC debugging
-ifeq ($(dbg),1)
-	NVCC_FLAGS += -g -O0
-else
-	NVCC_FLAGS += -O2
-endif
-
-# 'make emu=1' compiles the CUDA kernels for emulation
-ifeq ($(emu),1)
-	NVCC_FLAGS += -deviceemu
-endif
-
+targets=kmeans
 
 kmeans: cluster.o getopt.o kmeans.o kmeans_clustering.o kmeans_cuda.o rmse.o
-	$(CC) $(CC_FLAGS) cluster.o getopt.o kmeans.o kmeans_clustering.o kmeans_cuda.o rmse.o -o kmeans -L$(CUDA_LIB_DIR) -lcuda -lcudart
+	$(NVCC_LINK) $^ -o $@
 
 %.o: %.[ch]
 	$(CC) $(CC_FLAGS) $< -c
@@ -32,3 +12,6 @@ kmeans_cuda.o: kmeans_cuda.cu
 
 clean:
 	rm -f *.o *~ kmeans kmeans_cuda.linkinfo
+
+install: $(targets)
+	install -m $(install_perms) -t $(CUDA_BIN_DIR) $(targets)
