--- a/cuda/nn/Makefile
+++ b/cuda/nn/Makefile
@@ -1,20 +1,26 @@
 include ../../common/make.config
 
-LOCAL_CC = gcc -g -O3 -Wall
-CC := $(CUDA_DIR)/bin/nvcc
+CC_LINK_FLAGS += -lm
 
-all : nn hurricane_gen
+targets=nn hurricane_gen
+
+all : $(targets)
 
 clean :
-	rm -rf *.o nn nn_cuda.cu.cpp hurricane_gen
+	rm -rf *.o $(targets)
 
-nn : nn_cuda.cu
-	$(CC) -cuda nn_cuda.cu
-	$(CC) -o nn nn_cuda.cu.cpp
+nn_cuda.cu.cpp: nn_cuda.cu
+	$(NVCC_OBJ) -cuda $^ -o $@
+
+nn: nn_cuda.cu.cpp
+	$(NVCC_LINK) -o $@ $^
 
 hurricane_gen : hurricane_gen.c
-	$(LOCAL_CC) -o $@ $< -lm
+	$(NVCC_LINK) -o $@ $<
 
 #data :
 #	mkdir data
 #	./gen_dataset.sh
+
+install: $(targets)
+	install -m $(install_perms) -t $(CUDA_BIN_DIR) $(targets)
