--- a/common/make.config
+++ b/common/make.config
@@ -25,7 +25,7 @@ NVCC ?= $(CUDA_DIR)/bin/nvcc
 NVCC_FLAGS ?= -I$(CUDA_DIR)/include -Xptxas -v
 
 NVCC_OBJ ?=$(NVCC) $(NVCC_FLAGS)
-NVCC_LINK ?=$(NVCC_OBJ) -L$(CUDA_LIB_DIR) 
+NVCC_LINK ?=$(NVCC_OBJ) $(CC_LINK_FLAGS) -L$(CUDA_LIB_DIR) 
 
 # 'make dbg=1' enables NVCC debugging
 ifeq ($(dbg),1)
