--- a/cuda/pathfinder/Makefile
+++ b/cuda/pathfinder/Makefile
@@ -1,23 +1,16 @@
 include ../../common/make.config
 
-CC := $(CUDA_DIR)/bin/nvcc
-INCLUDE := $(CUDA_DIR)/include
-
 SRC = pathfinder.cu
 
 EXE = pathfinder
 
-release:
-	$(CC) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+targets=$(EXE)
 
-enum:
-	$(CC) -deviceemu $(SRC) -o $(EXE) -I$(INCLUDE) -L$$(CUDA_LIB_DIR) 
-
-debug:
-	$(CC) -g $(SRC) -o $(EXE) -I$(INCLUDE) -L$$(CUDA_LIB_DIR) 
-
-debugenum:
-	$(CC) -g -deviceemu $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+$(EXE): $(SRC)
+	$(NVCC_LINK) $^ -o $@
 
 clean:
-	rm -f pathfinder
+	rm -f $(targets)
+
+install: $(targets)
+	install -m $(install_perms) -t $(CUDA_BIN_DIR) $(targets)
