fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -11,14 +11,17 @@ OPENCL_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/opencl
 install_perms ?=0755
 
 # C compiler
-CC ?= gcc
+CC=gcc
+CXX=g++
 CC_FLAGS ?=
 CC_LINK_FLAGS ?=
 
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
 CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
-CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
+CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS) -lgomp
+
+OMP_NUM_THREADS ?= 8
 
 # CUDA compiler
 NVCC ?= $(CUDA_DIR)/bin/nvcc
