fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -19,7 +19,7 @@ CC_LINK_FLAGS ?=
 #OMP_LIB ?= -lgomp
 OMP_FLAG ?= -fopenmp
 CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
-CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS) -lgomp
+CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
 
 OMP_NUM_THREADS ?= 8
 
