mummergpu had lots of bugs

--- a/openmp/mummergpu/Makefile
+++ b/openmp/mummergpu/Makefile
@@ -1,8 +1,6 @@
 all: mummer 
-
+install: all
 mummer:
-	cd src; make
-
+	$(MAKE) -C src install
 clean:
-	cd src; make clean
-	
+	$(MAKE) -C src clean
