--- a/opencl/bfs/Makefile
+++ b/opencl/bfs/Makefile
@@ -1,34 +1,29 @@
 include ../../common/make.config
 
 #C compiler
-CC = g++
+CC = $(CXX)
 
 SRC = bfs.cpp timer.cc
 
-CC_FLAGS = -g -O3
-
 EXE = bfs
 
-release:$(SRC)
-	$(CC) $(CC_FLAGS) -lOpenCL  -fopenmp $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB)
+$(EXE):$(SRC)
+	$(OCL_LINK) $^ -o $@
 
 errmsg:$(SRC)
 	$(CC) $(CC_FLAGS) -lOpenCL -fopenmp $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D ERRMSG PTX_MSG
-	
+
 ptx:$(SRC)
 	$(CC) $(CC_FLAGS) -lOpenCL -fopenmp $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D PTX_MSG
 
 profile:$(SRC)
 	$(CC) $(CC_FLAGS) -lOpenCL -fopenmp $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D PROFILING
-	
+
 res:$(SRC)
 	$(CC) $(CC_FLAGS) -lOpenCL -fopenmp $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D RES_MSG
-	
-debug: $(SRC)
-	$(CC) $(CC_FLAGS) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB)
-	
-run:
-	./$(EXE)
-	
-clean: $(SRC)
+
+clean:
 	rm -f $(EXE) $(EXE).linkinfo result*
+
+install: $(targets)
+	install -m $(install_perms) -t $(OMP_BIN_DIR) $(targets)
