fix backprop OCL makefile

--- a/opencl/backprop/Makefile
+++ b/opencl/backprop/Makefile
@@ -1,18 +1,18 @@
 include ../../common/make.config
 
 # C compiler
-CC = g++
-CC_FLAGS = -g -O2 
+CC = $(CXX)
+targets=backprop
 
-backprop: backprop.o imagenet.o facetrain.o
-	$(CC) $(CC_FLAGS) -lOpenCL backprop_ocl.cpp backprop.o imagenet.o facetrain.o -o backprop -I$(OPENCL_INC) -L$(OPENCL_LIB)
+backprop: backprop.o imagenet.o facetrain.o backprop_ocl.cpp
+	$(OCL_LINK) $^ -o $@
 
 %.o: %.[ch]
 	$(CC) $(CC_FLAGS) $< -c
-	
+
 backprop.o: backprop.c 
 	$(CC) $(CC_FLAGS) backprop.c -c
-	
+
 facetrain.o: facetrain.c
 	$(CC) $(CC_FLAGS) facetrain.c -c
 
@@ -21,3 +21,6 @@ imagenet.o: imagenet.c
 
 clean:
 	rm -f *.o *~ backprop *.linkinfo
+
+install: $(targets)
+	install -m $(install_perms) -t $(OMP_BIN_DIR) $(targets)
