--- a/opencl/lavaMD/makefile
+++ b/opencl/lavaMD/makefile
@@ -57,4 +57,4 @@ clean:
 	./util/opencl/*.o
 
 install: $(targets)
-	install -m $(install_perms) -t $(OMP_BIN_DIR) $(targets)
+	install -m $(install_perms) -t $(OCL_BIN_DIR) $(targets)
