--- a/opencl/cfd/Makefile
+++ b/opencl/cfd/Makefile
@@ -1,27 +1,25 @@
 include ../../common/make.config
-#C compiler
-CC = g++
+CC =$(CXX)
 
-#OPENCL_DIR = /home/sc5nf/ati-stream-sdk-v2.2-lnx64/
-#INC = $(OPENCL_DIR)/include/ 
-#LIB = $(OPENCL_DIR)/lib/x86_64/
-
-FLAGS = -O3
 SRC = euler3d.cpp
 
 EXE = euler3d
+targets=$(EXE)
 
-release:$(SRC)
-	$(CC) -lOpenCL  $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB)	$(FLAGS) 
+$(EXE):$(SRC)
+	$(OCL_LINK) $^ -o $@
 
 errmsg:$(SRC)
 	$(CC) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D ERRMSG $(FLAGS)
-	
+
 ptx:$(SRC)
 	$(CC) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D PTX_MSG $(FLAGS)
-	
+
 res:$(SRC)
 	$(CC) -lOpenCL $(SRC) -o $(EXE) -I$(OPENCL_INC) -L$(OPENCL_LIB) -D RES_MSG $(FLAGS)
-	
+
 clean: $(SRC)
 	rm -f $(EXE) $(EXE).linkinfo result*
+
+install: $(targets)
+	install -m $(install_perms) -t $(OCL_BIN_DIR) $(targets)
