fix more makefiles

--- a/common/make.config
+++ b/common/make.config
@@ -6,7 +6,7 @@ RODINIA_BASE_DIR ?= $(HOME)/code/rodinia_2.0.1
 
 CUDA_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/cuda
 OMP_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/omp
-OPENCL_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/opencl
+OCL_BIN_DIR := $(RODINIA_BASE_DIR)/bin/linux/opencl
 
 install_perms ?=0755
 
@@ -22,6 +22,9 @@ CC_OMP ?=$(CC) $(CC_FLAGS) $(OMP_FLAG)
 CC_OMP_LINK ?= $(CC_OMP) $(CC_LINK_FLAGS)
 
 OMP_NUM_THREADS ?= 8
+
+# CUDA toolkit installation path
+CUDA_DIR ?= /usr/local/cuda4.0
 
 # CUDA compiler
 NVCC ?= $(CUDA_DIR)/bin/nvcc
@@ -44,8 +47,6 @@ ifeq ($(emu),1)
 	NVCC_FLAGS += -deviceemu
 endif
 
-# CUDA toolkit installation path
-CUDA_DIR ?= /usr/local/cuda
 
 # CUDA toolkit libraries
 CUDA_LIB_DIR := $(CUDA_DIR)/lib
