--- a/opencl/kmeans/Makefile
+++ b/opencl/kmeans/Makefile
@@ -1,25 +1,17 @@
 include ../../common/make.config
-# C compiler
-CC = g++
-CC_FLAGS = -g -O2 
+targets=kmeans
 
-kmeans: cluster.o getopt.o read_input.o kmeans_clustering.o rmse.o
-	$(CC) $(CC_FLAGS) -lOpenCL kmeans.cpp cluster.o getopt.o read_input.o kmeans_clustering.o rmse.o -o kmeans -I$(OPENCL_INC) -I$(OPENCL_DIR)/shared/inc/ -L$(OPENCL_LIB)
+kmeans: cluster.o getopt.o read_input.o kmeans_clustering.o rmse.o kmeans.o
+	$(OCL_LINK) $^ -o $@
 
-%.o: %.[ch]
-	$(CC) $(CC_FLAGS) $< -c
+%.o: %.c
+	$(OCL_OBJ) $< -c
 
-cluster.o: cluster.c 
-	$(CC) $(CC_FLAGS) cluster.c -c
-	
-getopt.o: getopt.c 
-	$(CC) $(CC_FLAGS) getopt.c -c
-	
-kmeans.o: kmeans.c 
-	$(CC) $(CC_FLAGS) read_input.c -c
-
-rmse.o: rmse.c
-	$(CC) $(CC_FLAGS) rmse.c -c
+%.o: %.cpp
+	$(OCL_OBJ) $< -c
 
 clean:
 	rm -f *.o *~ kmeans *.linkinfo
+
+install: $(targets)
+	install -m $(install_perms) -t $(OCL_BIN_DIR) $(targets)
